# spt_ExposureTimeCalculator

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.jsonc  CLAUDE.md  MANIFEST.in  Makefile  README  README.md  _build_backend.py  default.param  gen_sim_spec.defaults  gen_sim_spec.py  package-lock.json  package.json  pyproject.toml  run_etc.defaults  run_etc.py  set_path.py  set_path.sh  setup.py  sim_spec.defaults
.claude/: settings.json
.claude/agents/: etc-port-reviewer.md
.claude/hooks/: format-markdown.sh  format-python.sh  protect-files.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: etc-speedup-plan.md
example/notebooks/: ETC Example.ipynb
examples/: pfs_etc_example.toml
legacy/c_src/: Makefile  README.md  gsetc.c
legacy/python_wrapper/: README.md
legacy/python_wrapper/pfsspecsim/: dm_utils.py  pfsetc.py
legacy/python_wrapper/scripts/: run_etc.py
python/pfsspecsim/: __init__.py  dm_utils.py  pfsetc.py  pfsspec.py
python/pfsspecsim/datamodel/: README.md  datamodel.txt
python/pfsspecsim/datamodel/notebooks/: datamodel.ipynb
python/pfsspecsim/datamodel/python/pfs/datamodel/: __init__.py  pfsArm.py  pfsConfig.py  pfsObject.py  utils.py
python/pfsspecsim/datamodel/ups/: datamodel.table
scripts/: __init__.py  gen_sim_spec.defaults  gen_sim_spec.py  run_etc.defaults  run_etc.py
src/: Makefile  Makefile.omp  gsetc.c  gsetc.x  gsetc_omp.c  gsetc_omp.x  gsetc_r102.c  gsetc_r103.c
src/pfsspecsim/: __init__.py  cli.py  pfsetc.py  pfsspec.py  simspec.py
src/pfsspecsim/cli/: __init__.py  app.py  etc.py  sim.py
src/pfsspecsim/etc/: __init__.py  _modeldata.py  _parallel.py  atmosphere.py  cli.py  config.py  constants.py  engine.py  extinction.py  io.py  materials.py  noise.py  params.py  psf.py  sky.py  snr.py
src/pfsspecsim/etc/data/: README.md  modeldata.npz
src/pfsspecsim/legacy/: __init__.py  pfsetc.py
src/pfsspecsim/scripts/: gen_sim_spec.py  run_etc.py
src/pfsspecsim/sim/: __init__.py  dm_utils.py  engine.py  params.py  pfsspec.py
tests/: README.md  analyze_diff.py  gsetc_params.txt  gsetc_params_lr11006.txt  gsetc_params_mr.txt  gsetc_params_mr11006.txt
tests/python/: conftest.py  test_atmosphere.py  test_cli.py  test_cli_root.py  test_compat.py  test_config.py  test_constants.py  test_data.py  test_engine.py  test_extinction.py  test_io.py  test_legacy_scripts.py  test_materials.py  test_noise.py  test_noise_reference.py  test_parallel.py  test_params.py  test_psf.py  test_reference_outputs.py  test_sim.py  test_sim_spec.py  test_simspec.py  test_sky.py  test_snr.py
tmp/: gen_sim_spec.py
tmp/src/: modeldata.h
tools/: extract_modeldata.py
