[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8.0"]
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "pfsspecsim"
dynamic = ["version"]
description = "PFS ETC and spectral simulator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kiyoto Yabe", email = "kiyoto.yabe@ipmu.jp"}
]

dependencies = [
    # <2.5: datamodel w.2024.06 uses the 'a' dtype alias removed in numpy 2.5;
    # drop this bound once the datamodel pin is updated past the '|S' fix
    "numpy>=2.0,<2.5",
    "scipy",
    "matplotlib",
    "astropy",
    "typer>=0.12",
    "pfs.datamodel @ git+https://github.com/Subaru-PFS/datamodel.git@w.2024.06",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.7.0",
    "ruff>=0.5.0",
    "ty>=0.0.8"
]

[project.scripts]
pfs-run-etc = "pfsspecsim.scripts.run_etc:main"
pfs-gen-sim-spec = "pfsspecsim.scripts.gen_sim_spec:main"

[dependency-groups]
dev = ["pytest"]

[tool.uv]
# Rebuild the project (and thus the C executables via _build_backend.py) when
# the C sources, Makefiles, or the CC environment variable change; by default
# uv only watches pyproject.toml/setup.py/setup.cfg and would skip make
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.c" },
    { file = "src/**/*.h" },
    { file = "src/Makefile*" },
    { env = "CC" },
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pfsspecsim = [
    "config/*.dat",
    "bin/gsetc.x",
    "bin/gsetc_omp.x",
    "bin/Makefile",
    "etc/data/*.npz",
    "etc/data/README.md",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/pfsspecsim/_version.py"
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "F401",   # module imported but unused
    "F841",   # local variable is assigned to but never used
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N815",   # variable in class should be lowercase
    "N816",   # attribute in class should be lowercase
    "EM101",  # use 'isinstance()' instead of comparing types directly
    "TRY003", # unnecessary except block
]

[tool.black]
line-length = 88
target-version = ["py312"]