[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfsspecsim"
dynamic = ["version"]
description = "PFS ETC and spectral simulator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kiyoto Yabe", email = "kiyoto.yabe@ipmu.jp"}
]

dependencies = [
    # <2.5: datamodel w.2024.06 uses the 'a' dtype alias removed in numpy 2.5;
    # drop this bound once the datamodel pin is updated past the '|S' fix
    "numpy>=2.0,<2.5",
    "scipy",
    "matplotlib",
    "astropy",
    "typer>=0.12",
    "pfs.datamodel @ git+https://github.com/Subaru-PFS/datamodel.git@w.2024.06",
]

[project.scripts]
pfs-spec = "pfsspecsim.cli:app"
pfs-run-etc = "pfsspecsim.scripts.run_etc:main"
pfs-gen-sim-spec = "pfsspecsim.scripts.gen_sim_spec:main"

# Single dev dependency group (`uv sync` includes it by default; other tools
# can install it explicitly with `pip install --group dev` / `uv sync --group dev`).
# Superseded the old duplicate [project.optional-dependencies] dev extra.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.7.0",
    "ruff>=0.5.0",
    "ty>=0.0.8",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pfsspecsim = [
    "config/*.dat",
    "etc/data/*.npz",
    "etc/data/README.md",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/pfsspecsim/_version.py"
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "F401",   # module imported but unused
    "F841",   # local variable is assigned to but never used
    "E501",   # line too long, handled by black
    "E741",   # ambiguous variable name (l = wavelength/ℓ, matches gsetc.c)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N815",   # variable in class should be lowercase
    "N816",   # attribute in class should be lowercase
    "EM101",  # use 'isinstance()' instead of comparing types directly
    "TRY003", # unnecessary except block
]

[tool.black]
line-length = 88
target-version = ["py312"]